# smart-pip-magic

./: .gitignore  README.md  example.c  pyproject.toml
.github/workflows/: build_wheels.yml
src/imports/: analyze.py
src/naive/: simple.py
src/smart_pip/: __init__.py
tests/: test_smart_pip.py
tests/data/: nothing-0.0.2-py2.py3-none-any.whl  nothing-0.0.3-py2.py3-none-any.whl
