[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/naive", "src/import_machinery"]

[project]
name = "enigma-db"
version = "0.0.1"
authors = [
  { name="Xiao Chen", email="xiao.chen@databricks.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["ipython >= 6.0.0"]

[project.optional-dependencies]
dev = [
    "ruff"
]

[project.urls]
Homepage = "https://github.com/xiaochen-db/enigma"
Issues = "https://github.com/xiaochen-db/enigma/issues"
