[build-system]
requires = [ "setuptools >= 71.1.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "smart-pip-magic"
version = "0.1.1"
authors = [
  { name="Xiao Chen", email="xiao.chen@databricks.com" },
]
description = "A alternative pip magic to jupyter's %pip. It shows if you need to restart python after %smart_pip install"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["ipython >= 6.0.0"]

[project.optional-dependencies]
dev = [
    "ruff",
    "build",
    "twine",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/xiaochen-db/smart-pip-magic"
Issues = "https://github.com/xiaochen-db/smart-pip-magic/issues"
